--- a/view/client/includes/header.ejs
+++ b/view/client/includes/header.ejs
@@ -5,7 +5,7 @@
     <li><a href="/">خانه</a></li>
     <li><a href="http://localhost:3000/#featured">دسته بندی</a></li>
     <li><a href="#contact">درباره ما</a></li>
-    <div style="position: relative;">
+    <div class="search-container" style="position: relative;">
       <form class="container" method="POST" action="/api/product/getProducts/<%= ( typeof category === 'undefined' || category === "" || category === "all") ? "all" : category  %>">
         <input type="text" name="search" placeholder="جستجو در <%= ( typeof category === 'undefined' || category === "" || category === "all") ? "تمام محصولات" : `${category} ها` %>">
         <div class="search"></div>
@@ -17,7 +17,7 @@
 
     <div class="bx bx-menu" id="menu-icon"></div>
     <% if(user){ %>
-    <a href="/api/product/getCart"><i class="bx bx-shopping-bag"></i></a>
+    <a class="desktop" href="/api/product/getCart"><i class="bx bx-shopping-bag"></i></a>
     <div class="dropdown">
       <input class="dropdown-toggle" type="text">
       <div class="dropdown-text">
