--- a/public/css/style.css
+++ b/public/css/style.css
@@ -189,7 +189,8 @@ header.sticky {
 }
 .row img {
   object-fit: cover;
-  width: 380px;
+  /* width: 380px; */
+  width: 100%;
   height: 270px;
 }
 .fea-text {
@@ -462,6 +463,14 @@ header.sticky {
 }
 
 @media (max-width: 670px) {
+  .sign-input span {
+    flex-direction: column;
+    align-items: start !important;
+    justify-content: right !important;
+  }
+  .home-text img {
+    width: 100% !important;
+  }
   .search-container {
     display: none !important;
   }
