--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -506,12 +506,12 @@ select:focus {
 
 .single-product input {
   color: black;
-  width: 50px;
+  width: 66px;
   height: 40px;
   padding-left: 10px;
   font-size: 20px;
   margin-right: 10px;
-  border: 1px solid #ff523b;
+  border: 1px solid green;
   text-align: center;
 }
 
@@ -1038,8 +1038,6 @@ table {
   }
 }
 
-/*  */
-
 .tab-nav-container {
   position: fixed;
   bottom: 0;
@@ -1104,5 +1102,102 @@ table {
 
   .tab i {
     font-size: 1.4em;
+  }
+}
+
+/* 
+
+
+*/
+
+/* .search-icon {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+} */
+.search-icon .fa {
+  height: 40px;
+  width: 40px;
+  background-color: var(--main-color);
+  color: #ffffff;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.search-overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #000000;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease-in;
+  /* cursor: url("close.png"), auto; */
+}
+.search-overlay.activeS {
+  visibility: visible;
+  opacity: 0.8;
+  z-index: 10;
+}
+
+.search-popup {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 600px;
+  z-index: 11;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease-in;
+}
+.search-popup.activeS {
+  visibility: visible;
+  opacity: 1;
+  z-index: 11;
+}
+.search-popup .form-group {
+  position: relative;
+}
+.search-popup .form-control {
+  width: 100%;
+  height: 60px;
+  border: none;
+  padding: 0 100px 0 30px;
+  font-size: 18px;
+  border-radius: 30px;
+  color: #555555;
+}
+.search-popup .submit-btn {
+  background-color: var(--main-color);
+  font-size: 18px;
+  width: 70px;
+  height: 60px;
+  color: #ffffff;
+  cursor: pointer;
+  border: none;
+  position: absolute;
+  right: 0;
+  top: 10px;
+  border-radius: 0 30px 30px 0;
+}
+.search-popup .submit-btn:focus {
+  outline: none;
+}
+.search-popup .form-control:focus {
+  outline: none;
+}
+
+/*responsive*/
+@media (max-width: 650px) {
+  .search-popup {
+    width: 100%;
   }
 }
