--- a/view/client/signin.ejs
+++ b/view/client/signin.ejs
@@ -6,22 +6,28 @@
 
   <div class="sign-input">
     <h3>ورود</h3>
-
     <div>
 
+      <% if(message){ %>
+      <h5 style="text-align: center;
+        color: red;
+        border: 1px solid red;
+        border-radius: 16px;
+        padding: 2px;
+        background-color: #64000059; margin-bottom: 2rem;"><%=  message  %></h5>
+      <% } %>
 
-
-      <form action="/api/auth/signin" method="POST">
+      <form action=" /api/auth/signin" method="POST">
 
         <input type="text" name="email" placeholder="ایمیل خود را وارد کنید">
         <input type="text" name="password" placeholder="پسورد خود را وارد کنید">
 
-        <button type="submit" class="btn">ثبت</button>
+        <button type="submit" class="btn">ورود</button>
 
       </form>
 
 
-      <span>
+      <span class="auth-link">
         <p>رمز خود را فراموش کرده اید؟<a href="/api/auth/forgetPassword">اینجا کلیک کنید!</a></p>
         <p>اکانت ندارید؟<a href="/api/auth/signup">ورود به بخش ثبت نام!</a></p>
       </span>
