better user experience and see path of client is  where of website

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -462,7 +462,14 @@ header.sticky {
   }
 }
 
+.logout-mobile {
+  display: none;
+}
+
 @media (max-width: 670px) {
+  .logout-mobile {
+    display: block !important;
+  }
   .sign-input span {
     flex-direction: column;
     align-items: start !important;
