add zarinpal logo and enamad logo and create contactus aboutus

--- a/view/client/contactus.ejs
+++ b/view/client/contactus.ejs
@@ -5,13 +5,18 @@
 <div class="small-container cart-page">
   <div style="text-align: center; display: flex; flex-direction: column; border: 1px solid green; padding: 2rem; border-radius: 2rem;">
     <i style="color: green; font-size: 3rem;" class='bx bx-support'></i>
-    <h2>تماس با ما</h2>
+    <h2 style="border-bottom: 1px solid;">تماس با ما</h2>
     <h4 style="color: green; margin-top: 2rem;
   font-size: 2rem;">تماس با مجموعه پَم پَم</h4>
     <p>
       کانال های ارتباط ما با شما عزیزان در تلگرام واتساپ و تماس
     </p>
-    <p>09184813623 - 09180100891 - 09351033122</p>
+    <p>09180100891 - 09184813623 </p>
+
+    <h4 style="color: green; margin-top: 2rem;
+  font-size: 2rem;">پشتیبانی سایت</h4>
+    <p>در صورت بروز هرگونه مشکل در سایت یا فرایند خرید میتونید با شماره تلفن زیر در ارتباط باشید.</p>
+    <p>09351033122</p>
   </div>
 
 </div>
