--- a/view/client/includes/footer.ejs
+++ b/view/client/includes/footer.ejs
@@ -1,13 +1,31 @@
  <!----contact--->
  <section class="contact" id="contact">
    <div class="main-contact">
-     <h3>مارو دنبال کنید</h3>
-     <h5>صفحات فروشگاه ما در فضای مجازی</h5>
-     <div class="icons">
-       <a href="#"><i class="bx bxl-facebook-square"></i></a>
-       <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-       <a href="#"><i class="bx bxl-twitter"></i></a>
-     </div>
+     <span>
+       <h3>مارو دنبال کنید</h3>
+       <h5>صفحات فروشگاه ما در فضای مجازی</h5>
+       <div class="icons">
+         <a href="#"><i class="bx bxl-facebook-square"></i></a>
+         <a href="#"><i class="bx bxl-instagram-alt"></i></a>
+         <a href="#"><i class="bx bxl-twitter"></i></a>
+       </div>
+     </span>
+     <span>
+       <h3>نماد</h3>
+       <style>
+         #zarinpal {
+           margin: auto
+         }
+
+         #zarinpal img {
+           width: 50px;
+         }
+       </style>
+       <div id="zarinpal">
+         <script src="https://www.zarinpal.com/webservice/TrustCode" type="text/javascript"></script>
+       </div>
+       <img src="/images/enamad.png" alt="" width="60px">
+     </span>
    </div>
 
    <div class="main-contact">
