show length of item in cart in mobile tab bar and desktop nav bar & fix bug

--- a/view/client/cart.ejs
+++ b/view/client/cart.ejs
@@ -3,7 +3,7 @@
 
 <% let totalPrice = 0 %>
 <div class="small-container cart-page">
-  <% if(cart > 0){ %>
+  <% if(cart.length > 0){ %>
   <table>
     <tr>
       <th>
