--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -180,7 +180,7 @@
 } */
 
 .btn:hover {
-  background: #563434;
+  /* background: #563434; */
 }
 
 .header {
@@ -1199,5 +1199,239 @@ table {
 @media (max-width: 650px) {
   .search-popup {
     width: 100%;
+  }
+}
+
+/*  */
+
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+.modal {
+  z-index: 2;
+  width: 20rem;
+  min-height: 15rem;
+  padding: 1rem;
+  box-shadow: 1px 1px 25px 1px #5a3b3f;
+  border-radius: 8px;
+  text-align: center;
+  opacity: 0;
+  transition: all 0.4s ease-in-out;
+  transform: scale(0) translateY(30px);
+  background: #1e370c;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+}
+
+.btn.confirm-modal {
+  box-shadow: 0px 0px 2px 1px red;
+}
+
+.btn:hover:not(.show-modal) {
+  /* background-color: #201414; */
+}
+.backdrop {
+  background-color: rgba(0, 0, 0, 0.15);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: none;
+}
+.shape {
+  height: 4rem;
+  width: 100%;
+}
+.face2 {
+  position: absolute;
+  width: 4rem;
+  height: 4rem;
+  background: #fcfcfc;
+  border-radius: 50%;
+  border: 1px solid #3f3f3f;
+  top: 10%;
+  left: 37.5%;
+  z-index: 2;
+  animation: roll 3s ease-in-out infinite;
+}
+.eye {
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  background: #3f3f3f;
+  border-radius: 50%;
+  top: 40%;
+  left: 20%;
+}
+.right {
+  left: 68%;
+}
+.mouth {
+  position: absolute;
+  top: 43%;
+  left: 41%;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+}
+.sad {
+  top: 49%;
+  border: 2px solid;
+  border-color: #3f3f3f transparent transparent #3f3f3f;
+}
+/* .shadow {
+  position: absolute;
+  width: 21%;
+  height: 3%;
+  opacity: 0.5;
+  background: #3f3f3f;
+  left: 40%;
+  top: 33%;
+  border-radius: 50%;
+  z-index: 1;
+} */
+
+.move {
+  animation: move 3s ease-in-out infinite;
+}
+@keyframes roll {
+  0% {
+    transform: rotate(0deg);
+    left: 25%;
+  }
+  50% {
+    left: 60%;
+    transform: rotate(168deg);
+  }
+  100% {
+    transform: rotate(0deg);
+    left: 25%;
+  }
+}
+@keyframes move {
+  0% {
+    left: 25%;
+  }
+  50% {
+    left: 60%;
+  }
+  100% {
+    left: 25%;
+  }
+}
+
+.circles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.circles li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.03);
+  animation: animate 25s linear infinite;
+  bottom: -150px;
+}
+
+.circles li:nth-child(1) {
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(2) {
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 10s;
+}
+
+.circles li:nth-child(3) {
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
+}
+
+.circles li:nth-child(4) {
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation-duration: 16s;
+}
+
+.circles li:nth-child(5) {
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(6) {
+  left: 75%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 1s;
+}
+
+.circles li:nth-child(7) {
+  left: 35%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 5s;
+}
+
+.circles li:nth-child(8) {
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation-duration: 40s;
+}
+
+.circles li:nth-child(9) {
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation-duration: 32s;
+}
+
+.circles li:nth-child(10) {
+  left: 85%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 9s;
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
+  }
+
+  100% {
+    transform: translateY(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
   }
 }
