add login admin design

--- a/view/client/includes/footer.ejs
+++ b/view/client/includes/footer.ejs
@@ -5,9 +5,9 @@
        <h3>مارو دنبال کنید</h3>
        <h5>صفحات فروشگاه ما در فضای مجازی</h5>
        <div class="icons">
-         <a href="#"><i class="bx bxl-facebook-square"></i></a>
-         <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-         <a href="#"><i class="bx bxl-twitter"></i></a>
+         <a href="https://www.instagram.com/pam_pam.ir/"><i class="bx bxl-instagram bx-flashing"></i></a>
+         <a href="#"><i class='bx bxl-telegram'></i></a>
+         <a href="#"><i class='bx bxl-whatsapp'></i></a>
        </div>
      </span>
      <span>
@@ -30,10 +30,10 @@
 
    <div class="main-contact">
      <h3>دسترسی سریع</h3>
-     <li><a href="#home">خانه</a></li>
-     <li><a href="#featured">دسته بندی</a></li>
-     <li><a href="#new">بلاگ</a></li>
-     <li><a href="#contact">تماس با ما</a></li>
+     <li><a href="/">خانه</a></li>
+     <li><a href="/#featured">دسته بندی</a></li>
+     <li><a style="cursor: not-allowed;" href="#new">بلاگ</a></li>
+     <li><a href="/contactUs">تماس با ما</a></li>
    </div>
 
    <div class="main-contact">
@@ -57,7 +57,7 @@
  <div class="last-text">
    <p>
      Copyright © 2023 All rights reserved | This website Created By
-     <a href="#">Mohammad Jahansoz</a>
+     <a href="https://www.instagram.com/m.jahansoz/">Mohammad Jahansoz</a>
    </p>
  </div>
 
