--- a/view/client/includes/header.ejs
+++ b/view/client/includes/header.ejs
@@ -1,5 +1,5 @@
 <header>
-  <a href="#" class="logo">Pam-Pam.ir</a>
+  <a href="/" class="logo">Pam-Pam.ir</a>
 
   <ul class="navlist">
     <li><a href="/">خانه</a></li>
