edit product now available

--- a/view/admin/addProduct.ejs
+++ b/view/admin/addProduct.ejs
@@ -13,7 +13,7 @@
   <div class="add-edit-product">
 
 
-    <form action="/admin/allProduct" method="post">
+    <form action="/admin/addProduct" method="post">
       <input type="text" name="name" placeholder="نام کالا">
       <input type="number" name="price" placeholder="قیمت">
       <input type="sale" name="sale" placeholder="خاصیت">
