--- a/view/client/includes/footer.ejs
+++ b/view/client/includes/footer.ejs
@@ -34,6 +34,7 @@
      <li><a href="/#featured">دسته بندی</a></li>
      <li><a style="cursor: not-allowed;" href="#new">بلاگ</a></li>
      <li><a href="/contactUs">تماس با ما</a></li>
+     <li><a href="/aboutUS">درباره ما</a></li>
    </div>
 
    <div class="main-contact">
@@ -63,7 +64,6 @@
 
  <!----scroll top--->
  <a href="#" class="top"><i class="bx bx-up-arrow-alt"></i></a>
-
 
  <!--  -->
 
