--- a/view/admin/products.ejs
+++ b/view/admin/products.ejs
@@ -18,7 +18,7 @@
       <p><%= product.price %></p>
       <a class="btn" href="/admin/deleteProduct/<%= product._id %>">Delete</a>
       <a class="btn" href="/admin/product/<%= product._id %>">Edit</a>
-      <a href="#">Comments</a>
+      <a href="/admin/product/comments/<%= product._id %>">Comments</a>
     </div>
     <% } %>
   </div>
