--- a/view/client/product.ejs
+++ b/view/client/product.ejs
@@ -33,7 +33,7 @@
         </span>
 
         <h1><%= product.name %></h1>
-        <h4><%= product.price %> تومان</h4>
+        <h4><%= product.price.toLocaleString('fa') %> تومان</h4>
         <!-- <select>
         <option>Select Size</option>
         <option>XXL</option>
